tests/NormalTests/paczka1/fuzzy1/18050553.err
Error in line 12: 2rqSR A593 53,3
Error in line 5: jVdDIHxAHS9 A593 176,4
Error in line 29: 2rqSR A593 61,9
Error in line 40: kAkoANNRl S7t9 tt,0
